--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-prod": "NODE_ENV=production node ./src/server.js",
+    "start-dev": "nodemon ./src/server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.6.0"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^20.2.1",
+    "nanoid": "^3.1.30",
+    "nodemon": "^2.0.15"
   }
 }
