--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start-prod": "NODE_ENV=production node ./src/server.js",
-    "start-dev": "nodemon ./src/server.js"
+    "start-dev": "nodemon ./src/server.js",
+    "lint": "eslint ./"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.6.0"
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0"
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
